<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name">Reminders</string>

    <string name="launch_reminder" translatable="false">com.shtvsolution.recordatorios.launch_reminder</string>

    <string name="font_bold" translatable="false">fonts/RobotoCondensed-Bold.ttf</string>
    <string name="font_light" translatable="false">fonts/RobotoCondensed-Light.ttf</string>

    <string name="activity_alert_title">ACTIVITY REMINDER</string>
    <string name="personal_alert_title">PERSONAL REMINDER</string>
    <string name="doctor_alert_title">MEDICAL APPOINTMENT</string>
    <string name="measure_alert_title">MEASURE REMINDER</string>
    <string name="stimulus_alert_title">STIMULUS REMINDER</string>
    <string name="medication_alert_title">MEDICATION REMINDER</string>
    <string name="call_alert_title">INCOMING CALL</string>

    <string name="call_alert_subtitle">Calling:\u0020</string>

    <string name="incoming_call_accept">Accept</string>
    <string name="incoming_call_reject">Reject</string>

    <string name="feedback_survey_affirmative">Yes</string>
    <string name="feedback_survey_negative">No</string>

    <string name="mood_survey_great">Great</string>
    <string name="mood_survey_happy">Fine</string>
    <string name="mood_survey_meh">So-so</string>
    <string name="mood_survey_sad">Sad</string>
    <string name="mood_survey_bad">Bad</string>

    <string name="close_alert_text">Press the OK button to confirm</string>
    <string name="measure_alert_text">Press Yes to open the measures application or No to cancel</string>
    <string name="stimulus_alert_text">Press Yes to open the stimulus application or No to cancel</string>
    <string name="call_alert_text">Do you want to accept or to reject the incoming call?</string>

    <string name="error_launching_app">Application is not installed</string>
    <string name="hint_text">Press up and down arrows to see the content</string>

   </resources>
