<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alwaysDrawnWithCache="false"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:id="@+id/reminder_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dpi_55dp"
        android:layout_marginStart="@dimen/dpi_110dp"
        android:layout_marginEnd="@dimen/dpi_110dp"
        android:layout_marginBottom="@dimen/dpi_55dp"
        android:background="@drawable/reminder_rectangle"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/dpi_10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <!-- logo -->
                <ImageView
                    android:layout_width="@dimen/dpi_250dp"
                    android:layout_height="@dimen/dpi_120dp"
                    android:layout_marginEnd="@dimen/dpi_60dp"
                    android:padding="@dimen/dpi_5dp"
                    android:src="@drawable/header_logo" />
                <!-- Reminder picture -->
                <ImageView
                    android:id="@+id/reminder_icon"
                    android:layout_width="@dimen/dpi_250dp"
                    android:layout_height="@dimen/dpi_130dp"
                    android:layout_marginStart="@dimen/dpi_60dp"
                    android:padding="@dimen/dpi_10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/sh_prussian_blue_light"
                android:orientation="vertical"
                android:padding="@dimen/dpi_5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/dpi_10dp">

                    <!-- Reminder time -->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/sh_blue_dark"
                        android:gravity="center_vertical"
                        android:layout_gravity="center"
                        android:orientation="horizontal"
                        android:paddingEnd="@dimen/dpi_10dp"
                        android:paddingStart="@dimen/dpi_10dp">

                        <ImageView
                            android:layout_width="@dimen/dpi_50dp"
                            android:layout_height="@dimen/dpi_50dp"
                            android:src="@drawable/clock" />

                        <TextView
                            android:id="@+id/reminder_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingEnd="@dimen/dpi_10dp"
                            android:paddingStart="@dimen/dpi_10dp"
                            android:textColor="@color/white_transparent"
                            android:textSize="@dimen/dpi_46sp" />
                    </LinearLayout>

                    <!-- Reminder title -->
                    <TextView
                        android:id="@+id/reminder_type"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dpi_5dp"
                        android:textColor="@color/sh_blue_dark"
                        android:textSize="@dimen/dpi_46sp" />
                </LinearLayout>

                <!-- Reminder text -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dpi_15dp"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/reminder_text_action"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleX="1.1"
                        android:gravity="center"
                        android:text="@string/hint_text"
                        android:fontFamily="sans-serif-light"
                        android:textColor="@color/black"
                        android:textSize="@dimen/dpi_28sp"/>

                    <RelativeLayout
                        android:layout_width="@dimen/dpi_23dp"
                        android:layout_height="@dimen/dpi_45dp"
                        android:layout_marginStart="@dimen/dpi_40dp"
                        android:layout_marginEnd="@dimen/dpi_5dp"
                        android:background="@drawable/content_indication_up"
                        android:backgroundTint="@color/black"
                        android:gravity="center"/>

                    <RelativeLayout
                        android:layout_width="@dimen/dpi_23dp"
                        android:layout_height="@dimen/dpi_45dp"
                        android:background="@drawable/content_indication_down"
                        android:backgroundTint="@color/black"
                        android:gravity="center"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/reminder_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dpi_10dp"
                    android:layout_marginStart="@dimen/dpi_50dp"
                    android:layout_marginEnd="@dimen/dpi_50dp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:background="@drawable/info_text_background"
                    android:minLines="1"
                    android:maxLines="4"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/dpi_32sp" />

                <!-- Reminder action -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom">

                    <LinearLayout
                        android:id="@+id/reminder_action_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/reminder_action"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/dpi_10dp"
                            android:text="@string/close_alert_text"
                            android:fontFamily="sans-serif-light"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/dpi_45sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/reminder_action_feedback"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/dpi_10dp"
                            android:text="@string/close_alert_text"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/dpi_35sp"
                            android:textStyle="italic"
                            android:visibility="gone"/>
                    </LinearLayout>

                    <!-- Stimulus reminder actions -->
                    <LinearLayout
                        android:id="@+id/applaunch_options_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/reminder_action_container"
                        android:orientation="horizontal"
                        android:padding="@dimen/dpi_10dp"
                        android:gravity="center"
                        android:visibility="gone">

                        <RelativeLayout
                            android:id="@+id/applaunch_affirmative"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/buttons_focus"
                            android:clickable="true"
                            android:focusable="true"
                            android:nextFocusUp="@id/applaunch_affirmative"
                            android:padding="@dimen/dpi_10dp">
                            <TextView
                                android:layout_width="@dimen/dpi_180dp"
                                android:layout_height="@dimen/dpi_90dp"
                                android:padding="@dimen/dpi_2dp"
                                android:text="@string/feedback_survey_affirmative"
                                android:gravity="center"
                                android:textAlignment="center"
                                android:textSize="@dimen/dpi_55sp"
                                android:textStyle="bold"
                                android:textColor="@color/black"
                                android:background="@drawable/generic_survey_positive"/>
                        </RelativeLayout>

                        <RelativeLayout
                            android:id="@+id/applaunch_negative"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dpi_120dp"
                            android:layout_marginEnd="@dimen/dpi_80dp"
                            android:background="@drawable/buttons_focus"
                            android:clickable="true"
                            android:focusable="true"
                            android:nextFocusUp="@id/applaunch_negative"
                            android:padding="@dimen/dpi_10dp">

                            <TextView
                                android:layout_width="@dimen/dpi_180dp"
                                android:layout_height="@dimen/dpi_90dp"
                                android:padding="@dimen/dpi_2dp"
                                android:text="@string/feedback_survey_negative"
                                android:gravity="center"
                                android:textAlignment="center"
                                android:textSize="@dimen/dpi_55sp"
                                android:textStyle="bold"
                                android:textColor="@color/black"
                                android:background="@drawable/generic_survey_negative"/>
                        </RelativeLayout>
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/no_feedback_survey_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/dpi_20dp">
        <include
            layout="@layout/element_no_feedback_survey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <!-- Reminder focus -->
    <RelativeLayout
        android:id="@+id/reminder_container_focus"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/dpi_neg_5dp"
        android:layout_marginTop="@dimen/dpi_neg_2dp"
        android:background="@drawable/reminder_focus"
        android:visibility="invisible" />

</RelativeLayout>